load("//build:variables.bzl", "TEST_K8S_SETTINGS")
load(
    "//build/k8s:defs.bzl",
    "k8s_apply",
    "kind_load_image",
    "kind_load_images",
    "kustomization_dir",
)
load("@wfa_rules_cue//cue:defs.bzl", "cue_library")
load("//src/main/k8s:macros.bzl", "cue_dump")
load("//src/main/docker:images.bzl", "ALL_LOCAL_IMAGES")
load("@wfa_common_jvm//build:versions.bzl", "SPANNER_EMULATOR")

package(
    default_visibility = [":__subpackages__"],
)

SECRET_NAME = "certs-and-configs"

cue_library(
    name = "config_cue",
    srcs = ["config.cue"],
    deps = [
        "//src/main/k8s:base",
        "//src/main/k8s:spanner",
    ],
)

cue_library(
    name = "emulators_cue",
    srcs = ["emulators.cue"],
    deps = [
        ":config_cue",
        "//src/main/k8s:base",
    ],
)

cue_dump(
    name = "emulators",
    cue_tags = {
        "secret_name": SECRET_NAME,
        "spanner_emulator_version": SPANNER_EMULATOR.version,
    },
    deps = [":emulators_cue"],
)

kustomization_dir(
    name = "emulators_kustomization",
    testonly = True,
    srcs = [":emulators"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_dump(
    name = "kingdom",
    srcs = ["kingdom.cue"],
    cue_tags = {
        "secret_name": SECRET_NAME,
    },
    deps = [
        ":config_cue",
        "//src/main/k8s:kingdom",
    ],
)

kustomization_dir(
    name = "kingdom_kustomization",
    testonly = True,
    srcs = [":kingdom"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_dump(
    name = "resource_setup",
    srcs = ["resource_setup.cue"],
    cue_tags = {
        "secret_name": SECRET_NAME,
    },
    deps = [
        ":config_cue",
        "//src/main/k8s:resource_setup",
    ],
)

kustomization_dir(
    name = "resource_setup_kustomization",
    testonly = True,
    srcs = [":resource_setup"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_library(
    name = "duchies_cue",
    srcs = ["duchies.cue"],
    deps = [
        ":config_cue",
        "//src/main/k8s:duchy",
    ],
)

cue_dump(
    name = "duchies",
    cue_tags = {
        "secret_name": SECRET_NAME,
        "aggregator_cert_name": TEST_K8S_SETTINGS.aggregator_cert_name,
        "worker1_cert_name": TEST_K8S_SETTINGS.worker1_cert_name,
        "worker2_cert_name": TEST_K8S_SETTINGS.worker2_cert_name,
    },
    tags = ["manual"],
    deps = [":duchies_cue"],
)

kustomization_dir(
    name = "duchies_kustomization",
    testonly = True,
    srcs = [":duchies"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_library(
    name = "edp_simulators_cue",
    srcs = ["edp_simulators.cue"],
    deps = [
        ":config_cue",
        "//src/main/k8s:edp_simulator",
    ],
)

cue_dump(
    name = "edp_simulators",
    cue_tags = {
        "secret_name": SECRET_NAME,
        "mc_name": TEST_K8S_SETTINGS.mc_name,
        "edp1_name": TEST_K8S_SETTINGS.edp1_name,
        "edp2_name": TEST_K8S_SETTINGS.edp2_name,
        "edp3_name": TEST_K8S_SETTINGS.edp3_name,
        "edp4_name": TEST_K8S_SETTINGS.edp4_name,
        "edp5_name": TEST_K8S_SETTINGS.edp5_name,
        "edp6_name": TEST_K8S_SETTINGS.edp6_name,
    },
    tags = ["manual"],
    deps = [
        ":edp_simulators_cue",
    ],
)

kustomization_dir(
    name = "edp_simulators_kustomization",
    testonly = True,
    srcs = [":edp_simulators"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_dump(
    name = "edp_simulators_csv",
    srcs = ["edp_simulators_csv.cue"],
    cue_tags = {
        "secret_name": SECRET_NAME,
        "mc_name": TEST_K8S_SETTINGS.mc_name,
        "edp1_name": TEST_K8S_SETTINGS.edp1_name,
        "edp2_name": TEST_K8S_SETTINGS.edp2_name,
        "edp3_name": TEST_K8S_SETTINGS.edp3_name,
        "edp4_name": TEST_K8S_SETTINGS.edp4_name,
        "edp5_name": TEST_K8S_SETTINGS.edp5_name,
        "edp6_name": TEST_K8S_SETTINGS.edp6_name,
    },
    tags = ["manual"],
    deps = [
        ":edp_simulators_cue",
    ],
)

kustomization_dir(
    name = "edp_simulators_csv_kustomization",
    testonly = True,
    srcs = [":edp_simulators_csv"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_dump(
    name = "mc_frontend_simulator",
    srcs = ["frontend_simulator.cue"],
    cue_tags = {
        "secret_name": SECRET_NAME,
        "mc_name": TEST_K8S_SETTINGS.mc_name,
        "mc_api_key": TEST_K8S_SETTINGS.mc_api_key,
    },
    tags = ["manual"],
    deps = [
        ":config_cue",
        "//src/main/k8s:frontend_simulator",
    ],
)

kustomization_dir(
    name = "mc_frontend_simulator_kustomization",
    testonly = True,
    srcs = [":mc_frontend_simulator"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_dump(
    name = "postgres_database",
    srcs = ["postgres_database.cue"],
    cue_tags = {
        "db_secret_name": TEST_K8S_SETTINGS.db_secret_name,
    },
    tags = ["manual"],
    deps = [
        "//src/main/k8s:base",
    ],
)

cue_dump(
    name = "reporting",
    srcs = ["reporting.cue"],
    cue_tags = {
        "secret_name": SECRET_NAME,
        "db_secret_name": TEST_K8S_SETTINGS.db_secret_name,
        "mc_config_secret_name": TEST_K8S_SETTINGS.mc_config_secret_name,
    },
    tags = ["manual"],
    deps = [
        ":config_cue",
        "//src/main/k8s:postgres",
        "//src/main/k8s:reporting",
    ],
)

kustomization_dir(
    name = "reporting_kustomization",
    testonly = True,
    srcs = [":reporting"],
    generate_kustomization = True,
    tags = ["manual"],
    deps = ["//src/main/k8s/testing/secretfiles:kustomization"],
)

cue_dump(
    name = "prometheus",
    srcs = ["prometheus.cue"],
    tags = ["manual"],
    deps = ["//src/main/k8s:base"],
)

cue_dump(
    name = "open_telemetry",
    srcs = ["open_telemetry.cue"],
    tags = ["manual"],
    deps = ["//src/main/k8s:open_telemetry"],
)

cue_dump(
    name = "grafana",
    srcs = ["grafana.cue"],
    cue_tags = {
        "secret_name": TEST_K8S_SETTINGS.grafana_secret_name,
    },
    tags = ["manual"],
    deps = ["//src/main/k8s:grafana"],
)

[kind_load_image(
    name = "load_" + image.name,
    image_archive = image.image + ".tar",
    tags = ["manual"],
) for image in ALL_LOCAL_IMAGES]

EMULATOR_IMAGE_IMPORTS = [":load_fake_storage_server_image"]

kind_load_images(
    name = "load_emulator_images",
    tags = ["manual"],
    deps = EMULATOR_IMAGE_IMPORTS,
)

k8s_apply(
    name = "emulators_kind",
    testonly = True,
    srcs = [":emulators_kustomization"],
    # Deploying emulators should bring down everything else since DB and storage
    # get recreated.
    delete_selector = "app.kubernetes.io/part-of=halo-cmms",
    imports = EMULATOR_IMAGE_IMPORTS,
    tags = ["manual"],
)

RESOURCE_SETUP_IMAGE_IMPORTS = [":load_resource_setup_runner_image"]

kind_load_images(
    name = "load_resource_setup_images",
    tags = ["manual"],
    deps = RESOURCE_SETUP_IMAGE_IMPORTS,
)

k8s_apply(
    name = "resource_setup_kind",
    testonly = True,
    srcs = [":resource_setup_kustomization"],
    imports = RESOURCE_SETUP_IMAGE_IMPORTS,
    tags = ["manual"],
)

KINGDOM_IMAGE_NAMES = [
    "kingdom_spanner_update_schema_image",
    "kingdom_data_server_image",
    "kingdom_system_api_server_image",
    "kingdom_v2alpha_public_api_server_image",
]

KINGDOM_IMAGE_IMPORTS = [
    ":load_" + image_name
    for image_name in KINGDOM_IMAGE_NAMES
]

kind_load_images(
    name = "load_kingdom_images",
    tags = ["manual"],
    deps = KINGDOM_IMAGE_IMPORTS,
)

k8s_apply(
    name = "kingdom_kind",
    testonly = True,
    srcs = [":kingdom_kustomization"],
    delete_selector = "app.kubernetes.io/part-of=halo-cmms,app.kubernetes.io/component=kingdom",
    imports = KINGDOM_IMAGE_IMPORTS,
    tags = ["manual"],
)

DUCHY_IMAGE_NAMES = [
    "duchy_spanner_update_schema_image",
    "duchy_async_computation_control_server_image",
    "duchy_herald_daemon_image",
    "duchy_computations_cleaner_image",
    "forwarded_storage_spanner_computations_server_image",
    "forwarded_storage_computation_control_server_image",
    "forwarded_storage_liquid_legions_v2_mill_daemon_image",
    "forwarded_storage_requisition_fulfillment_server_image",
]

DUCHY_IMAGE_IMPORTS = [
    ":load_" + image_name
    for image_name in DUCHY_IMAGE_NAMES
]

kind_load_images(
    name = "load_duchy_images",
    tags = ["manual"],
    deps = DUCHY_IMAGE_IMPORTS,
)

k8s_apply(
    name = "duchies_kind",
    testonly = True,
    srcs = [":duchies_kustomization"],
    delete_selector = "app.kubernetes.io/part-of=halo-cmms,app.kubernetes.io/component=duchy",
    imports = DUCHY_IMAGE_IMPORTS,
    tags = ["manual"],
)

EDP_SIMULATOR_IMAGE_IMPORTS = [
    ":load_forwarded_storage_edp_simulator_runner_image",
]

kind_load_images(
    name = "load_edp_simulator_images",
    tags = ["manual"],
    deps = EDP_SIMULATOR_IMAGE_IMPORTS,
)

k8s_apply(
    name = "edp_simulators_kind",
    testonly = True,
    srcs = [":edp_simulators_kustomization"],
    delete_selector = "app.kubernetes.io/part-of=halo-cmms,app.kubernetes.io/component=simulator",
    imports = EDP_SIMULATOR_IMAGE_IMPORTS,
    tags = ["manual"],
)

k8s_apply(
    name = "edp_simulators_csv_kind",
    srcs = [":edp_simulators_csv_kustomization"],
    delete_selector = "app.kubernetes.io/part-of=halo-cmms,app.kubernetes.io/component=simulator",
    imports = EDP_SIMULATOR_IMAGE_IMPORTS,
    tags = ["manual"],
)

FRONTEND_SIMULATOR_IMAGE_IMPORTS = [
    ":load_forwarded_storage_frontend_simulator_runner_image",
]

kind_load_images(
    name = "load_mc_frontend_simulator_images",
    tags = ["manual"],
    deps = FRONTEND_SIMULATOR_IMAGE_IMPORTS,
)

k8s_apply(
    name = "mc_frontend_simulator_kind",
    testonly = True,
    srcs = [":mc_frontend_simulator_kustomization"],
    imports = FRONTEND_SIMULATOR_IMAGE_IMPORTS,
    tags = ["manual"],
)

k8s_apply(
    name = "reporting_database_kind",
    testonly = True,
    srcs = [":postgres_database"],
    delete_selector = "app.kubernetes.io/component=postgres",
    tags = ["manual"],
)

REPORTING_IMAGE_NAMES = [
    "reporting_postgres_update_schema_image",
    "reporting_data_server_image",
    "reporting_v1alpha_public_api_server_image",
]

REPORTING_IMAGE_IMPORTS = [
    ":load_" + image_name
    for image_name in REPORTING_IMAGE_NAMES
]

kind_load_images(
    name = "load_reporting_images",
    tags = ["manual"],
    deps = REPORTING_IMAGE_IMPORTS,
)

k8s_apply(
    name = "reporting_kind",
    testonly = True,
    srcs = [":reporting_kustomization"],
    delete_selector = "app.kubernetes.io/component=reporting",
    imports = REPORTING_IMAGE_IMPORTS,
    tags = ["manual"],
)

k8s_apply(
    name = "prometheus_kind",
    testonly = True,
    srcs = [":prometheus"],
    delete_selector = "app.kubernetes.io/component=prometheus",
    tags = ["manual"],
)

k8s_apply(
    name = "open_telemetry_kind",
    testonly = True,
    srcs = [":open_telemetry"],
    tags = ["manual"],
)

k8s_apply(
    name = "grafana_kind",
    testonly = True,
    srcs = [":grafana"],
    tags = ["manual"],
)
