load("@wfa_common_jvm//build:kt_jvm_proto_library.bzl", "kt_jvm_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")

package(default_visibility = ["//src:__subpackages__"])

java_proto_library(
    name = "serialization_java_proto",
    deps = ["@com_github_google_shell//shell_encryption:serialization_proto"],
)

kt_jvm_proto_library(
    name = "serialization_kt_jvm_proto",
    srcs = ["@com_github_google_shell//shell_encryption:serialization_proto"],
    deps = [":serialization_java_proto"],
)
