load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:webpack-dev-server/package_json.bzl", webpack_server = "bin")
load("@npm//:webpack-cli/package_json.bzl", webpack = "bin")

npm_link_all_packages()

BUILD_NODE_DEPS = [
    "//:node_modules/html-webpack-plugin",
    "//:node_modules/react-dom",
    "//:node_modules/react",
    "//:node_modules/typescript",
    "//:node_modules/web-vitals",
    "//:node_modules/mini-css-extract-plugin",
    "//:node_modules/webpack",
    "//:node_modules/babel-loader",
    "//:node_modules/ts-loader",
    "//:node_modules/css-loader",
    "//:node_modules/style-loader",
]

js_library(
    name = "build_node_deps",
    srcs = BUILD_NODE_DEPS,
)

webpack.webpack_cli(
    name = "dev_bundle",
    srcs = [
        ":build_node_deps",
        ":tsconfig",
        ":webpack_config",
        "//src/main/react/reporting-ui/public",
        "//src/main/react/reporting-ui/src:src_files",
    ],
    args = [
        "--config webpack.config.js",
        "--mode development",
    ],
    chdir = package_name(),
    log_level = "debug",
    output_dir = True,
)

webpack_server.webpack_dev_server_binary(
    name = "dev_serve",
    args = [
        "--config webpack.config.js",
        "--mode development",
    ],
    chdir = package_name(),
    data = [
        ":build_node_deps",
        ":tsconfig",
        ":webpack_config",
        "//src/main/react/reporting-ui/public",
        "//src/main/react/reporting-ui/src:src_files",
    ],
    log_level = "debug",
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

js_library(
    name = "jest_config",
    srcs = ["jest.config.js"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "webpack_config",
    srcs = ["webpack.config.js"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)
