load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle", "webpack_devserver")

npm_link_all_packages()

BUILD_NODE_DEPS = [
    "//:node_modules/html-webpack-plugin",
    "//:node_modules/react-dom",
    "//:node_modules/react",
    "//:node_modules/typescript",
    "//:node_modules/web-vitals",
    "//:node_modules/mini-css-extract-plugin",
    "//:node_modules/webpack",
    "//:node_modules/babel-loader",
    "//:node_modules/ts-loader",
    "//:node_modules/css-loader",
    "//:node_modules/style-loader",
]

js_library(
    name = "build_node_deps",
    srcs = BUILD_NODE_DEPS,
)

webpack_bundle(
    name = "webpack_bundle",
    node_modules = "//:node_modules",
    srcs = [
        ":tsconfig",
        ":webpack_config",
        "//src/main/react/reporting-ui/public",
        "//src/main/react/reporting-ui/src:src_files",
    ],
    deps = [
        ":build_node_deps",
    ],
    output_dir = True,
    webpack_config = ":webpack_config",
)

webpack_devserver(
    name = "webpack_devserver",
    node_modules = "//:node_modules",
    data = [
        ":tsconfig",
        "//src/main/react/reporting-ui/public",
        "//src/main/react/reporting-ui/src:src_files",
        ":build_node_deps",
    ],
    webpack_config = ":webpack_config",
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

js_library(
    name = "jest_config",
    srcs = ["jest.config.js"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "webpack_config",
    srcs = ["webpack.config.js"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)
