load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "jest_files",
    srcs = ["__mocks__/styleMock.js"],
    visibility = [
        "//src/test/react/reporting-ui:__subpackages__",
    ],
)

js_library(
    name = "jest_base_config",
    srcs = ["jest_base.config.js"],
    visibility = [
        "//src/test/react/reporting-ui:__subpackages__",
    ],
)
