load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "jest_config",
    srcs = ["jest.config.js"],
)

js_library(
    name = "test_node_deps",
    srcs = [
        "//:node_modules/@types/jest",
        "//:node_modules/@types/testing-library__jest-dom",
        "//:node_modules/@testing-library/dom",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@testing-library/user-event",
        "//:node_modules/jest",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/jest-junit",
        "//:node_modules/jest-transform-stub",
        "//:node_modules/ts-jest",
    ],
)
