load("@rules_python//python:defs.bzl", "py_library")

package(
    default_visibility = ["//visibility:public"],
)

py_library(
    name = "noiseninja",
    srcs = glob(["noiseninja/**/*.py"]),
    imports = ["."],
)

py_library(
    name = "report",
    srcs = glob(["report/**/*.py"]),
    imports = ["."],
    deps = [":noiseninja"],
)

py_library(
    name = "tools",
    srcs = glob(["tools/**/*.py"]),
    imports = ["."],
    deps = [
        ":noiseninja",
        ":report",
    ],
)
